--- a/Registration.html
+++ b/Registration.html
@@ -22,7 +22,7 @@
 
 			<nav id="nav">
 				<ul>
-					<li><a href="Home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 
 					<li>
 						<a href="#">Team<a>
