--- a/TravelVenue.html
+++ b/TravelVenue.html
@@ -24,7 +24,7 @@
 
 			<nav id="nav">
 				<ul>
-					<li><a href="Home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 
 					<li>
 						<a href="#">Team<a>
