--- a/Agenda.html
+++ b/Agenda.html
@@ -58,19 +58,19 @@
 				<!-- Content -->
 
 				<section id="content">
-					<h3>Wednesday, August 24th, 2022 (0:00-0:00PM EST)</br>Steering Committee Event</h3>
+					<h3>Wednesday, August 24th, 2022 (0:00-0:00PM EST)</br>Steering Committee Meeting</h3>
 					<ul>
 						<li><b>Presenter:</b> Presenter</li>
 						<li><b> Topic: </b> Topic</li>
 						<li><b> Advisor: </b> Advisor</li>
 					</ul>
-					<h4>Event Description</h4>
+					<h4>Steering committee only</h4>
 					<hr />
 				</section>
 
 
 				<section id="content">
-					<h3>Thursday, August 25th, 2022 (0:00-0:00PM EST)</br>Event #2 Description </h3>
+					<h3>Thursday, August 25th, 2022 (0:00-0:00PM EST)</br>Workshop</h3>
 					<ul>
 						<li><b>Presenter:</b> Presenter</li>
 						<li><b> Topic: </b> Topic</li>
