--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -56,7 +56,7 @@
 					<h2>Steering Committee</h2>
 					<p>The steering committee is a group prominent scientists and leaders that were selected to
 						represent key segments and application areas of critical importance to the
-						UPittISC consortium objectives. The advisory group provides the faculty leadership team with
+						UPittISC collaboration objectives. The advisory group provides the faculty leadership team with
 						insights about
 						emerging needs and trends within relevant industries and across the various agencies.
 						An updated list of the current advisory group members and their organizational affiliation are
@@ -72,7 +72,8 @@
 						<h4>Tony Lindsay</h4>
 						<p>GTI, Managing Director
 					</header>
-					<h4>Email:<a href="mailto: tlindsay@gti.energy"> tlindsay@gti.energy</a> </h4>
+					<h4>Email:<a href="mailto: tlindsay@gti.energy"> tlindsay@gti.enery</a> </h4> 
+					<a href="https://www.linkedin.com/in/tony-lindsay-gti" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
 					<header>
@@ -81,6 +82,7 @@
 						<p>Peoples Gas, VP, BD and Renewables
 					</header>
 					<h4>Email:<a href="mailto: William.Sapon@peoples-gas.com"> William.Sapon@peoples-gas.com</a> </h4>
+					<a href="https://www.linkedin.com/in/williamsapon" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 						</p>
 
 					<header>
@@ -89,6 +91,7 @@
 						<p>Duquesne Light Company, Director, Innovation
 					</header>
 					<h4>Email:<a href="mailto: jgould@duqlight.com"> jgould@duqlight.com</a> </h4>
+					<a href="https://www.linkedin.com/in/joshuagould" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 						</p>
 
 
@@ -98,6 +101,7 @@
 						<p>EPRI, Program Manager
 					</header>
 					<h4>Email:<a href="mailto: smaley@epri.comy"> smaley@epri.com</a> </h4>
+					<a href="https://www.linkedin.com/in/susan-maley-54a2a234" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 						</p>
 
 					<header>
@@ -116,6 +120,7 @@
 						<p>Akselos, VP Americas
 					</header>
 					<h4>Email:<a href="mailto: mat.podskarbi@akselos.com"> mat.podskarbi@akselos.com</a> </h4>
+					<a href="https://www.linkedin.com/in/mat-podskarbi" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
 
@@ -126,6 +131,7 @@
 						<p>Ansys, Engineering Manager, Digital Twins
 					</header>
 					<h4>Email:<a href="mailto: saba.almalkie@ansys.com"> saba.almalkie@ansys.com</a> </h4>
+					<a href="https://www.linkedin.com/in/saba-almalkie-07052412" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
 
@@ -136,6 +142,7 @@
 						<p>Lumoptix, President
 					</header>
 					<h4>Email:<a href="mailto:lumoptix@aol.com">  lumoptix@aol.com</a> </h4>
+					<a href="https://www.linkedin.com/in/boblieberman" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
 
