--- a/TravelVenue.html
+++ b/TravelVenue.html
@@ -62,13 +62,39 @@
 					<ul>
 						<li><b>Address: </b>1435 Bedford Avenue Pittsburgh, PA 15219</li>
 						<li><b>Telephone: </b>412-802-0988</li>
+
+
+
+						<li><b>Hotel Suggestions:<a
+									href="https://www.hilton.com/en/hotels/pitdtdt-doubletree-hotel-and-suites-pittsburgh-downtown/">
+									DoubleTree by Hilton Hotel & Suites Pittsburgh Downtown</a> One Bigelow Square,
+								Pittsburgh, PA 15219 (0.6 miles away) </b> <br> <b> <a
+									href="https://www.druryhotels.com/locations/pittsburgh-pa/drury-plaza-hotel-pittsburgh-downtown">
+									Drury Plaza Hotel Pittsburgh Downtown</a> 745 Grant Street, Pittsburgh, PA (0.6
+								miles from EIC)</b></li>
+
+
+						<li><b>Air Travel: </b>Pittsburgh International Airport (airport code PIT), 18 miles away</li>
+						<li><b>Parking: </b>Across the street from the Energy Innovation Center for $6.25/day, street
+							parking on Bedford Avenue.</li>
 					</ul>
-					<h4>The mission of the Energy Innovation Center is to contribute to socially responsible workforce development, foster energy and sustainable technology advancement, and assist in job creation through a commitment to diversity, innovation and comprehensive education.</h4>
+
+
+					<h4>The mission of the Energy Innovation Center is to contribute to socially responsible workforce
+						development, foster energy and sustainable technology advancement, and assist in job creation
+						through a commitment to diversity, innovation and comprehensive education. The building offers a
+						dynamic atmosphere for any event, with multiple floor plans and dramatic views of the Pittsburgh
+						skyline. The building has historically preserved elements that pay homage to Pittsburgh’s
+						industrial past, contrasted with innovative sustainable design that is emblematic of
+						Pittsburgh’s future.</h4>
+
+
+
 					<hr />
 				</section>
 
 
-					<!--<div class="row">
+				<!--<div class="row">
 								
 								<div class="col-4 col-12-medium">
 									  <img src="images/CMU.png" alt="" style="width:50%" >
@@ -93,7 +119,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-		
+
 			<ul class="copyright">
 				<li>&copy; All rights reserved.</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a>, Ari A. and Thomas J.</li>
