--- a/ConferenceOrganizers.html
+++ b/ConferenceOrganizers.html
@@ -54,7 +54,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Paul Ohodnicki</h2>
-						<p>UPittISC Faculty Co-Director (Pitt)<br> Associate Professor, Mechanical Engineering &
+						<p>UPittISC Workshop Chair<br> Associate Professor, Mechanical Engineering &
 							Materials Science <br> Director, Engineering Science Program</p>
 					</header>
 					<img style="WIDTH:250px; HEIGHT:360px" src="images/Ohodnicki.jpeg" alt="" class="center">
