--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>There is an increasing need for infrastructure sensing to enable the Internet of Things
+							<p><font size = "3"> There is an increasing need for infrastructure sensing to enable the Internet of Things
 								and Industry 4.0. The infrastructures are essential for the nation’s safe and secure
 								operation, including power generation, energy transportation, power grid, civil
 								structures, and renewables. Existing sensor technologies are not adequate to meet the
@@ -89,7 +89,7 @@
 								opportunities related to the development and advancement of sensor technologies for
 								critical infrastructure monitoring, spanning energy delivery and storage (e.g. natural
 								gas, oil, H2), electricity grid, conventional and renewable energy generation, and
-								carbon storage.
+								carbon storage.</font>
 							<p>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -109,7 +109,7 @@
 					<h2>Goals</h2>
 					<p></p>
 				</header>
-				<p>
+				<p> <font size = "3">
 					The goals of the workshop are to increase awareness of existing on-going research and
 					collaborations with University of Pittsburgh and regional stakeholders in the following areas:
 					<br>
@@ -128,6 +128,7 @@
 
 					<br>4) Team and collaboration partnerships capable of responding to funding agencies’ and industry’s
 					call for sensor technologies.
+					</font>
 				</p>
 
 			</div>
@@ -142,8 +143,9 @@
 					<h2>Scope</h2>
 				</header>
 				<p>
+					<font size = "2.8">
 					The workshop particularly seeks to focus on the following areas:
-					<br>
+					
 					<br>1. Multiple sensing platforms (e.g. optical fiber sensing, passive wireless sensors,
 					electrochemical sensors, chip sensors)
 
@@ -157,6 +159,7 @@
 					green-house gas emissions, enabling large-scale H2 transportation, supporting needs for a robust
 					and resilient electricity and natural gas transportation and delivery system, and early
 					detection of environmental contamination.
+					</font>
 				</p>
 
 				<p></p>
