Update travel venue options and format

--- a/TravelVenue.html
+++ b/TravelVenue.html
@@ -65,13 +65,20 @@
 
 
 
-						<li><b>Hotel Suggestions:<a
-									href="https://www.hilton.com/en/hotels/pitdtdt-doubletree-hotel-and-suites-pittsburgh-downtown/">
-									DoubleTree by Hilton Hotel & Suites Pittsburgh Downtown</a> One Bigelow Square,
-								Pittsburgh, PA 15219 (0.6 miles away) </b> <br> <b> <a
-									href="https://www.druryhotels.com/locations/pittsburgh-pa/drury-plaza-hotel-pittsburgh-downtown">
-									Drury Plaza Hotel Pittsburgh Downtown</a> 745 Grant Street, Pittsburgh, PA (0.6
-								miles from EIC)</b></li>
+						<li><b>Hotel Suggestions: </b>
+							<br> 1.<a
+								href="https://www.hilton.com/en/hotels/pitdtdt-doubletree-hotel-and-suites-pittsburgh-downtown/">
+								DoubleTree by Hilton Hotel & Suites Pittsburgh Downtown</a> One Bigelow Square,
+							Pittsburgh, PA 15219 (0.4 miles away)
+							<br> 2.<a
+								href="https://www.druryhotels.com/locations/pittsburgh-pa/drury-plaza-hotel-pittsburgh-downtown">
+								Drury Plaza Hotel Pittsburgh Downtown</a> 745 Grant Street, Pittsburgh, PA (0.6 miles
+							away)
+							<br> 3.<a
+								href="https://www.choicehotels.com/pennsylvania/pittsburgh/cambria-hotels/pa637?mc=llgoxxpx">
+								Cambria Hotel Pittsburgh - Downtown</a> 1320 Centre Ave, Pittsburgh, PA (0.4 milees
+							away)
+						</li>
 
 
 						<li><b>Air Travel: </b>Pittsburgh International Airport (airport code PIT), 18 miles away</li>
