--- a/Registration.html
+++ b/Registration.html
@@ -39,8 +39,8 @@
 
 					<li><a href="TravelVenue.html">Travel and Venue</a></li>
 
-					<li><a href="Registration.html">Registration</a></li>
-
+					<li><a href="https://pitt.co1.qualtrics.com/jfe/form/SV_eyvDLU1VyBYwr2u" target="_blank">Registration</a></li>
+					
 					
 				</ul>
 			</nav>
