--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -41,7 +41,8 @@
 
 					<li><a href="TravelVenue.html">Travel and Venue</a></li>
 
-					<li><a href="Registration.html">Registration</a></li>
+					<li><a href="https://pitt.co1.qualtrics.com/jfe/form/SV_eyvDLU1VyBYwr2u"
+							target="_blank">Registration</a></li>
 
 
 				</ul>
@@ -54,13 +55,13 @@
 			<div class="container">
 				<header class="major">
 					<h2>Steering Committee</h2>
-					<p>The steering committee is a group prominent scientists and leaders that were selected to
-						represent key segments and application areas of critical importance to the
-						UPittISC collaboration objectives. The advisory group provides the faculty leadership team with
-						insights about
-						emerging needs and trends within relevant industries and across the various agencies.
-						An updated list of the current advisory group members and their organizational affiliation are
-						listed below:</p>
+					<p>The steering committee is a group of prominent scientists and leaders that were carefully
+						selected to represent key segments and application areas of critical importance to the UPittISC
+						objectives. The advisory group provides the faculty and leadership team with insights about
+						emerging needs and trends within relevant industries and across various agencies. An updated
+						list of current advisory group members and their organizational affiliation are listed below:
+
+					</p>
 				</header>
 
 				<!-- Content -->
@@ -72,11 +73,12 @@
 						<h4>Tony Lindsay</h4>
 						<p>GTI, Managing Director
 					</header>
-					<h4>Email:<a href="mailto: tlindsay@gti.energy"> tlindsay@gti.enery</a> </h4> 
-					<a href="https://www.linkedin.com/in/tony-lindsay-gti" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
+					<h4>Email:<a href="mailto: tlindsay@gti.energy"> tlindsay@gti.enery</a> </h4>
+					<a href="https://www.linkedin.com/in/tony-lindsay-gti" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
-		
+
 
 					<header>
 						<hr />
@@ -84,8 +86,9 @@
 						<p>Duquesne Light Company, Director, Innovation
 					</header>
 					<h4>Email:<a href="mailto: jgould@duqlight.com"> jgould@duqlight.com</a> </h4>
-					<a href="https://www.linkedin.com/in/joshuagould" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
-						</p>
+					<a href="https://www.linkedin.com/in/joshuagould" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
+					</p>
 
 
 					<header>
@@ -94,8 +97,9 @@
 						<p>EPRI, Program Manager
 					</header>
 					<h4>Email:<a href="mailto: smaley@epri.comy"> smaley@epri.com</a> </h4>
-					<a href="https://www.linkedin.com/in/susan-maley-54a2a234" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
-						</p>
+					<a href="https://www.linkedin.com/in/susan-maley-54a2a234" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
+					</p>
 
 					<header>
 						<hr />
@@ -113,7 +117,8 @@
 						<p>Akselos, VP Americas
 					</header>
 					<h4>Email:<a href="mailto: mat.podskarbi@akselos.com"> mat.podskarbi@akselos.com</a> </h4>
-					<a href="https://www.linkedin.com/in/mat-podskarbi" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
+					<a href="https://www.linkedin.com/in/mat-podskarbi" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
 
@@ -124,7 +129,8 @@
 						<p>Ansys, Engineering Manager, Digital Twins
 					</header>
 					<h4>Email:<a href="mailto: saba.almalkie@ansys.com"> saba.almalkie@ansys.com</a> </h4>
-					<a href="https://www.linkedin.com/in/saba-almalkie-07052412" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
+					<a href="https://www.linkedin.com/in/saba-almalkie-07052412" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
 
@@ -135,7 +141,8 @@
 						<p>Lumoptix, President
 					</header>
 					<h4>Email:<a href="mailto:lumoptix@aol.com">  lumoptix@aol.com</a> </h4>
-					<a href="https://www.linkedin.com/in/boblieberman" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
+					<a href="https://www.linkedin.com/in/boblieberman" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
 
