--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 					<li><a href="TravelVenue.html">Travel and Venue</a></li>
 
-					<li><a href="Registration.html">Registration</a></li>
+					<li><a href="https://pitt.co1.qualtrics.com/jfe/form/SV_eyvDLU1VyBYwr2u"
+							target="_blank">Registration</a></li>
 
 
 				</ul>
@@ -76,20 +77,22 @@
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p><font size = "2"> There is an increasing need for infrastructure sensing to enable the Internet of Things
-								and Industry 4.0. The infrastructures are essential for the nation’s safe and secure
-								operation, including power generation, energy transportation, power grid, civil
-								structures, and renewables. Existing sensor technologies are not adequate to meet the
-								increasing need for monitoring; therefore, new sensor technologies need to be developed.
-								As the sensor technology matures, technology transfer and deployment become more
-								important, which require engagement of industry and workforce development including
-								training and educating highly skilled, interdisciplinary scientists and engineers
-								capable of working at interfaces between disciplines. The UPitt Infrastructure Sensing
-								Collaboration workshop will focus on both existing collaborations and future partnership
-								opportunities related to the development and advancement of sensor technologies for
-								critical infrastructure monitoring, spanning energy delivery and storage (e.g. natural
-								gas, oil, H2), electricity grid, conventional and renewable energy generation, and
-								carbon storage.</font>
+							<p>
+								<font size="2.8"> There is an increasing need for infrastructure sensing to enable the
+									Internet of Things and Industry 4.0. The infrastructures are essential for the
+									nation’s safe and secure operation, including power generation, energy
+									transportation, power grid, civil structures, and renewables. Existing sensor
+									technologies are not adequate to meet increasing need for monitoring; therefore, new
+									sensor technologies need to be developed. As sensor technology matures, technology
+									transfer and deployment become more important, requiring engagement of industry and
+									workforce development including training and educating highly skilled,
+									interdisciplinary scientists and engineers capable of working at interfaces between
+									disciplines. The UPitt Infrastructure Sensing Collaboration (UPISC) workshop will
+									focus on existing collaborations and future partnership opportunities related to
+									development and advancement of sensor technologies for critical infrastructure
+									monitoring, spanning energy delivery and storage (e.g. natural gas, oil, H2),
+									electricity grid, conventional and renewable energy generation, and carbon storage.
+								</font>
 							<p>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -109,25 +112,20 @@
 					<h2>Goals</h2>
 					<p></p>
 				</header>
-				<p> <font size = "2">
-					The goals of the workshop are to increase awareness of existing on-going research and
-					collaborations with University of Pittsburgh and regional stakeholders in the following areas:
-					<br>
+				<p>
+					<font size="3">
+						The goals of the workshop are to increase awareness of existing on-going research and collaborations with University of Pittsburgh and regional stakeholders in the following areas: 
+						<br>
 
-					<br>1) Development of novel sensor technologies to pursue innovative solutions to infrastructure
-					sensing
-					needs
+						<br>1) Development of novel sensor technologies as solutions to infrastructure sensing needs;  
 
-					<br>2) Regional collaboration to promote workforce development in the emerging sensor area for
-					near-term
-					R&D capability needs and future deployment and commercial needs;
+						<br>2) Regional collaboration to promote workforce development in the emerging sensor area for near-term R&D capability needs and future deployment and commercial needs;     
 
-					<br>3) Engagements with industry and stakeholders, regarding sensor technologies and related
-					technology
-					transfer;
+						<br>3) Engagements with industry and stakeholders, regarding sensor technologies and related technology transfer;    
 
-					<br>4) Team and collaboration partnerships capable of responding to funding agencies’ and industry’s
-					call for sensor technologies.
+						<br>4) Team and collaboration partnerships capable of responding to funding agencies’ and industry’s call for sensor technologies. 
+
+ 
 					</font>
 				</p>
 
@@ -143,22 +141,15 @@
 					<h2>Scope</h2>
 				</header>
 				<p>
-					<font size = "2.8">
-					The workshop particularly seeks to focus on the following areas:
-					
-					<br>1. Multiple sensing platforms (e.g. optical fiber sensing, passive wireless sensors,
-					electrochemical sensors, chip sensors)
+					<font size="3">
+						The workshop particularly seeks to focus on the following areas: 
 
-					<br>2. Spanning sensor technology development areas from fundamental principles of sensor materials
-					to
-					prototypes in field validations,
+						<br>1. Multiple sensing platforms with spatially distributed sensing capability (e.g. optical fiber sensing, passive wireless sensors, electrochemical sensors, chip sensors) 
 
-					<br>3. Coupling with physics-based modeling and artificial intelligence (AI)-enabled sensor networks
-					and digital twin technologies. Impacts of intelligent infrastructure sensing include predictive
-					monitoring before infrastructure failures occur (structural, electrical, etc.), mitigation of
-					green-house gas emissions, enabling large-scale H2 transportation, supporting needs for a robust
-					and resilient electricity and natural gas transportation and delivery system, and early
-					detection of environmental contamination.
+						<br>2. Spanning sensor technology development areas from fundamental principles of sensor materials to prototypes in field validations, 
+						prototypes in field validations,
+
+						<br>3. Coupling with physics-based modeling and artificial intelligence (AI)-enabled sensor networks and digital twin technologies for specific infrastructure needs. 
 					</font>
 				</p>
 
@@ -169,7 +160,33 @@
 		</section>
 
 		<!-- Four -->
+		<section id="three" class="spotlight style3 left">
+			<span class="image fit main bottom"><img src="images/ImpactBackground.jpg" alt="" /></span>
+			<div class="content">
+				<header>
+					<h2>Impact</h2>
+				</header>
+				<p>
+					<font size="3">
+						The workshop seeks to promote intelligent infrastructure sensing for the following impacts:
 
+						<br>1. Predictive monitoring before infrastructure failures occur (structural, electrical, etc.) 
+
+						<br>2. Mitigation of green-house gas emissions, 
+
+						<br>3. Enabling large-scale H2 transportation, 
+						
+						<br>4. Supporting needs for a robust and resilient electricity and natural gas transportation and delivery system, 
+
+						<br>5. Early detection of environmental contamination. 
+					</font>
+				</p>
+
+				<p></p>
+
+			</div>
+			<a href="#four" class="goto-next scrolly">Next</a>
+		</section>
 
 		<!-- Five -->
 
