--- a/Agenda.html
+++ b/Agenda.html
@@ -41,7 +41,8 @@
 
 					<li><a href="TravelVenue.html">Travel and Venue</a></li>
 
-					<li><a href="https://pitt.co1.qualtrics.com/jfe/form/SV_eyvDLU1VyBYwr2u" target="_blank">Registration</a></li>
+					<li><a href="https://pitt.co1.qualtrics.com/jfe/form/SV_eyvDLU1VyBYwr2u"
+							target="_blank">Registration</a></li>
 
 
 				</ul>
@@ -57,37 +58,276 @@
 
 				<!-- Content -->
 
-				<section id="content">
-					<h3>Wednesday, August 24th, 2022 (0:00-0:00PM EST)</br>Steering Committee Meeting</h3>
-					<ul>
-						<li><b>Presenter:</b> Presenter</li>
-						<li><b> Topic: </b> Topic</li>
-						<li><b> Advisor: </b> Advisor</li>
-					</ul>
-					<h4>Steering committee only</h4>
-					<hr />
-				</section>
 
+				<h3>Wednesday, August 24th, 2022 (1:00-7:00 PM EST)</br>Steering Committee Meeting</h3>
 
-				<section id="content">
-					<h3>Thursday, August 25th, 2022 (0:00-0:00PM EST)</br>Workshop</h3>
-					<ul>
-						<li><b>Presenter:</b> Presenter</li>
-						<li><b> Topic: </b> Topic</li>
-						<li><b> Advisor: </b> Advisor</li>
-					</ul>
-					<h4>Event Description</h4>
-					<hr />
-				</section>
-
-				<section id="content">
+		
 
 
 
+				<table style="width:100%">
+					
+					<tr>
+						<th>Time</th>
+						<th>Activity</th>
+
+					</tr>
+					<tr>
+						<td>1:00 PM</td>
+						<td>Welcome Remarks
+
+						</td>
+
+					</tr>
+					<tr>
+						<td>1:05 PM</td>
+						<td>Workshop Planning Updates</td>
+
+					</tr>
+
+					<tr>
+						<td>1:30 PM</td>
+						<td>Summary Report of Individual Steering Committee Member Meetings</td>
+
+					</tr>
+
+					<tr>
+						<td>2:45 PM</td>
+						<td>Break</td>
+
+					</tr>
+
+
+					<tr>
+						<td>3:00 PM</td>
+						<td>Roadmap/Brainstorming Session on Infrastructure Sensing Needs</td>
+
+					</tr>
+
+					<tr>
+						<td>4:15 PM</td>
+						<td>Overview of Workshop</td>
+
+					</tr>
+
+
+					<tr>
+						<td>4:30 PM</td>
+						<td>Adjourn</td>
+
+					</tr>
+
+					<tr>
+						<td>5:00-7:00 PM</td>
+						<td>Networking Happy Hour and Light Refreshments</td>
+
+					</tr>
+
+				</table>
+			
+
+				<h3>Thursday, August 25th, 2022 (8:00 AM-7:00PM EST)</br>Workshop</h3>
+
+				<table style="width:100%">
+					<tr>
+						<th>Time</th>
+						<th>Activity</th>
+
+					</tr>
+					<tr>
+						<td>8:00 AM</td>
+						<td>Welcome Remarks
+
+						</td>
+
+					</tr>
+					<tr>
+						<td>8:10 AM</td>
+						<td>Speaker Introduction</td>
+
+					</tr>
+
+					<tr>
+						<td>8:15 AM</td>
+						<td>Keynote Speaker – Case for a Sensing Collaboration</td>
+
+					</tr>
+
+					<tr>
+						<td>8:45 AM</td>
+						<td>Topic One Speaker Introduction</td>
+
+					</tr>
+
+
+					<tr>
+						<td>8:50 AM</td>
+						<td>Topic One – Optical Fiber Sensing</td>
+
+					</tr>
+
+					<tr>
+						<td>9:20 AM</td>
+						<td>Workshop Logistics – Day One, Morning </td>
+
+					</tr>
+
+
+					<tr>
+						<td>9:25 AM</td>
+						<td>Break</td>
+
+					</tr>
+
+					<tr>
+						<td>9:40 AM</td>
+						<td>Topic Two Speaker Introduction</td>
+
+					</tr>
+
+					<tr>
+						<td>9:45 AM</td>
+						<td>Topic Two – Passive Wireless Sensing </td>
+
+					</tr>
+
+
+					<tr>
+						<td>10:15 AM</td>
+						<td>Topic Three Speaker Introduction</td>
+
+					</tr>
+
+					<tr>
+						<td>10:20 AM</td>
+						<td>Topic Three – Novel Sensing Materials </td>
+
+					</tr>
+
+					<tr>
+						<td>10:50 AM</td>
+						<td>Panel Introduction</td>
+
+					</tr>
+
+
+					<tr>
+						<td>11:00 AM</td>
+						<td>Panel on Sensing Opportunities and Needs – Industry, University and National Lab Perspective</td>
+
+					</tr>
+
+					<tr>
+						<td>11:45 AM</td>
+						<td>Logistical Announcements / Lunch / Networking Break</td>
+
+					</tr>
+				</table>
+				<hr />
+				<table style="width:100%" class="centered">
+					<tr>
+						<th>Time</th>
+						<th>Activity</th>
+
+					</tr>
+					<tr>
+						<td>1:15 PM</td>
+						<td>Afternoon Announcements</td>
+
+					</tr>
+					<tr>
+						<td>1:20 PM</td>
+						<td>Keynote Speaker Introduction</td>
+
+					</tr>
+
+					<tr>
+						<td>1:25 PM</td>
+						<td>Keynote Speaker</td>
+
+					</tr>
+
+					<tr>
+						<td>1:55 PM</td>
+						<td>Topic Four Speaker Introduction</td>
+
+					</tr>
+
+
+					<tr>
+						<td>2:00 PM</td>
+						<td>Topic Four – Modeling for Sensing </td>
+
+					</tr>
+
+					<tr>
+						<td>2:30 PM</td>
+						<td>Topic Five Speaker Introduction</td>
+
+					</tr>
+
+
+					<tr>
+						<td>2:35 PM</td>
+						<td>Topic Five – Digital Twin Models</td>
+
+					</tr>
+
+					<tr>
+						<td>3:05 PM</td>
+						<td>Break</td>
+
+					</tr>
+
+					<tr>
+						<td>3:20 PM</td>
+						<td>Optional Panel/Breakout Rooms</td>
+
+					</tr>
+
+
+					<tr>
+						<td>4:05 PM</td>
+						<td>Looking to the Future and Next Steps</td>
+
+					</tr>
+
+					<tr>
+						<td>4:35 PM</td>
+						<td>Poster Session Summaries</td>
+
+					</tr>
+
+					<tr>
+						<td>4:50 PM</td>
+						<td>Final Remarks</td>
+
+					</tr>
+
+
+					<tr>
+						<td>5:00-7:00 PM</td>
+						<td>Networking Event</td>
+
+					</tr>
+
+
+				</table>
 
 
 
-					<!--<div class="row">
+
+
+
+
+
+
+
+
+
+
+
+				<!--<div class="row">
 								
 								<div class="col-4 col-12-medium">
 									  <img src="images/CMU.png" alt="" style="width:50%" >
@@ -112,7 +352,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			
+
 			<ul class="copyright">
 				<li>&copy; All rights reserved.</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a>, Ari A. and Thomas J.</li>
