--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 		<!-- Three -->
 		<section id="three" class="spotlight style3 left">
-			<span class="image fit main bottom"><img src="images/VisionBackground.jpg" alt="" /></span>
+			<span class="image fit main bottom"><img src="images/ScopeBackground.jpg" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>Scope</h2>
@@ -160,7 +160,7 @@
 		</section>
 
 		<!-- Four -->
-		<section id="three" class="spotlight style3 left">
+		<section id="three" class="spotlight style2 right">
 			<span class="image fit main bottom"><img src="images/ImpactBackground.jpg" alt="" /></span>
 			<div class="content">
 				<header>
