--- a/ConferenceOrganizers.html
+++ b/ConferenceOrganizers.html
@@ -92,11 +92,11 @@
 						<h3>Research interests</h3>
 
 						<ol>
-							<li>Soft Magnetic Materials and Manufacturing</li>
-							<li>Component Design and Optimization Methods </li>
-							<li>Integrated Sensing and Real-Time Process Control</li>
-							<li>Power Electronics Converter / Component Interfaces</li>
-
+							<li>Electromagnetic component design and materials</li>
+							<li>Optical fiber and photonic sensors and materials</li>
+							<li>Passive wireless sensors and material</li>
+							<li>Applied electromagnetism and non-destructive evaluation</li>
+						
 						</ol>
 
 					</section>
