--- a/Agenda.html
+++ b/Agenda.html
@@ -60,7 +60,7 @@
 				<!-- Content -->
 
 
-				<h3>Steering Committee Only Event</br>Date: August 24, 2022</h3>
+				<h3>Steering Committee Only Event</h3><h4>Date: August 24, 2022</h4>
 
 		
 
@@ -126,14 +126,14 @@
 
 					<tr>
 						<td>4:15 – 6:00 p.m</td>
-						<td>Networking Happy Hour and Light Refreshments</td>
+						<td>Networking Social Hour and Light Refreshments</td>
 
 					</tr>
 
 				</table>
 			
 
-				<h3>General Event</br>Date: August 25, 2022</h3>
+				<h3>General Event</h3><h4>Date: August 25, 2022</h4>
 				
 				<i><h1>Morning Agenda</h1></i>
 
@@ -145,7 +145,7 @@
 					</tr>
 					<tr>
 						<td>8:00 AM</td>
-						<td>Welcome Remarks
+						<td>Welcome Remarks and Introduction to the Workshop (Objective, Scope, Steering Committee)
 
 						</td>
 
@@ -158,20 +158,20 @@
 
 					<tr>
 						<td>8:15 AM</td>
-						<td>Keynote Speaker – Case for a Sensing Collaboration</td>
+						<td>University Speakers – Case for a Sensing Collaboration (NETL and UPitt) </td>
 
 					</tr>
 
 					<tr>
 						<td>8:45 AM</td>
-						<td>Topic One Speaker Introduction</td>
+						<td>Keynote Industry Speaker #1 Introduction </td>
 
 					</tr>
 
 
 					<tr>
 						<td>8:50 AM</td>
-						<td>Topic One – Optical Fiber Sensing</td>
+						<td>Topic One – EPRI Perspective on Advanced Sensing Needs (Keynote)</td>
 
 					</tr>
 
@@ -190,13 +190,13 @@
 
 					<tr>
 						<td>9:40 AM</td>
-						<td>Topic Two Speaker Introduction</td>
+						<td>Topic Two – Speaker Introduction</td>
 
 					</tr>
 
 					<tr>
 						<td>9:45 AM</td>
-						<td>Topic Two – Passive Wireless Sensing </td>
+						<td>Topic Two – Sensor Device Technologies (Optical, Passive Wireless, IC, etc.)</td>
 
 					</tr>
 
@@ -209,7 +209,7 @@
 
 					<tr>
 						<td>10:20 AM</td>
-						<td>Topic Three – Novel Sensing Materials </td>
+						<td>Topic Three – Sensor Data Communication, Integration, and Analytics</td>
 
 					</tr>
 
@@ -222,7 +222,10 @@
 
 					<tr>
 						<td>11:00 AM</td>
-						<td>Panel on Sensing Opportunities and Needs – Industry, University and National Lab Perspective</td>
+						<td>Panel on Sensing Opportunities and Needs
+							
+						<br>Industry, University and National Lab Perspective
+							</td>
 
 					</tr>
 
