--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>
-								<font size="2.8"> There is an increasing need for infrastructure sensing to enable the
+								<font-size="2.8"> There is an increasing need for infrastructure sensing to enable the
 									Internet of Things and Industry 4.0. The infrastructures are essential for the
 									nation’s safe and secure operation, including power generation, energy
 									transportation, power grid, civil structures, and renewables. Existing sensor
@@ -92,7 +92,7 @@
 									development and advancement of sensor technologies for critical infrastructure
 									monitoring, spanning energy delivery and storage (e.g. natural gas, oil, H2),
 									electricity grid, conventional and renewable energy generation, and carbon storage.
-								</font>
+								</font-size>
 							<p>
 						</div>
 						<div class="col-4 col-12-medium">
