--- a/ConferenceOrganizers.html
+++ b/ConferenceOrganizers.html
@@ -166,60 +166,60 @@
 								/ <a href="https://netl.doe.gov/" target="blank" target="_blank"> NETL Website</a></h4>
 							</p>
 
-				</div>
-			</div>
-		</section>
-
-		<header class="major">
-			<h2>Hessam Babaee</h2>
-			<p>UPittISC Affiliate Faculty (Pitt MEMS)<br> Assistant Professor Mechanical Engineering
-				and
-				Materials Science
-				<br>
-			</p>
-		</header>
-		<img style="WIDTH:250px; HEIGHT:350px" src="images/Babaee.jpg" alt="" class="center">
 
 
-		<!-- Content -->
-		<section id="content">
-
-			<h3>Biography</h3>
-			<p>Dr. Hessam Babaee is currently an Assistant Professor in the Department of Mechanical
-				engineering and Materials Science at the University of Pittsburgh. He earned his
-				Ph.D. in Mechanical Engineering and master’s in applied mathematics both from
-				Louisiana State University in 2013. He then joined the Mechanical Engineering
-				Department at MIT for his postdoctoral research, where he worked with Prof. George
-				Karniadakis. He then joined the University of Pittsburgh in January 2017. His
-				research is focused on developing reduced-order models and machine learning
-				techniques for fluid mechanics problems. His research has been funded by many
-				organizations including NASA, the National Science Foundation (NSF), the National
-				Institute of Health (NIH), and the Air Force Office of Scientific Research (AFOSR).
-			</p>
-			<h3>Research interests</h3>
-
-			<ol>
-				<li>On-the-fly Random Order Modeling of High-Dimensional PDE</li>
-				<li>Reduction of Sensor Multi-Dimensional Data</li>
-				<li>High Perfromance Computing</li>
-				<li>Multi-Fidelity Modeling</li>
-				<li>Multi-Physics Modeling</li>
-				<li>Stochastic Modeling</li>
-				<li>Uncertainty Quantification</li>
-
-			</ol>
-		</section>
-		<p>
-		<h4>Email: <a href="mailto: h.babaee@pitt.edu">h.babaee@pitt.edu</a> </h4>
-		<h4> <a href="https://scholar.google.com/citations?user=GvQ9aq8AAAAJ&hl=en" target="blank">Google Scholar</a>
-			/ <a href="https://www.engineering.pitt.edu/people/faculty/hessameddin-babaee/" target="blank"> Department
-				Website</a>
-			/ <a href="https://www.babaeelab.com/" target="blank"> Group Website</a></h4>
-		</p>
+							<header class="major">
+								<h2>Hessam Babaee</h2>
+								<p>UPittISC Affiliate Faculty (Pitt MEMS)<br> Assistant Professor Mechanical Engineering
+									and
+									Materials Science
+									<br>
+								</p>
+							</header>
+							<img style="WIDTH:250px; HEIGHT:350px" src="images/Babaee.jpg" alt="" class="center">
 
 
+							<!-- Content -->
+							<section id="content">
 
-		</section>
+								<h3>Biography</h3>
+								<p>Dr. Hessam Babaee is currently an Assistant Professor in the Department of Mechanical
+									engineering and Materials Science at the University of Pittsburgh. He earned his
+									Ph.D. in Mechanical Engineering and master’s in applied mathematics both from
+									Louisiana State University in 2013. He then joined the Mechanical Engineering
+									Department at MIT for his postdoctoral research, where he worked with Prof. George
+									Karniadakis. He then joined the University of Pittsburgh in January 2017. His
+									research is focused on developing reduced-order models and machine learning
+									techniques for fluid mechanics problems. His research has been funded by many
+									organizations including NASA, the National Science Foundation (NSF), the National
+									Institute of Health (NIH), and the Air Force Office of Scientific Research (AFOSR).
+								</p>
+								<h3>Research interests</h3>
+
+								<ol>
+									<li>On-the-fly Random Order Modeling of High-Dimensional PDE</li>
+									<li>Reduction of Sensor Multi-Dimensional Data</li>
+									<li>High Perfromance Computing</li>
+									<li>Multi-Fidelity Modeling</li>
+									<li>Multi-Physics Modeling</li>
+									<li>Stochastic Modeling</li>
+									<li>Uncertainty Quantification</li>
+
+								</ol>
+							</section>
+							<p>
+							<h4>Email: <a href="mailto: h.babaee@pitt.edu">h.babaee@pitt.edu</a> </h4>
+							<h4> <a href="https://scholar.google.com/citations?user=GvQ9aq8AAAAJ&hl=en"
+									target="blank">Google Scholar</a>
+								/ <a href="https://www.engineering.pitt.edu/people/faculty/hessameddin-babaee/"
+									target="blank"> Department
+									Website</a>
+								/ <a href="https://www.babaeelab.com/" target="blank"> Group Website</a></h4>
+							</p>
+
+
+
+	
 
 
 		<header class="major">
@@ -329,14 +329,14 @@
 					Department Website</a></h4>
 		</p>
 
-
-
-
-
-
 	</div>
 	</div>
 	</section>
+
+
+
+
+
 
 
 
