--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -73,7 +73,7 @@
 						<h4>Tony Lindsay</h4>
 						<p>GTI, Managing Director
 					</header>
-					<h4>Email:<a href="mailto: tlindsay@gti.energy"> tlindsay@gti.enery</a> </h4>
+					<h4>Email:<a href="mailto: tlindsay@gti.energy"> tlindsay@gti.energy.com</a> </h4>
 					<a href="https://www.linkedin.com/in/tony-lindsay-gti" class="icon brands alt fa-linkedin-in"
 						target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
