--- a/ConferenceOrganizers.html
+++ b/ConferenceOrganizers.html
@@ -120,7 +120,7 @@
 									<br>
 								</p>
 							</header>
-							<img style="WIDTH:250px; HEIGHT:360px" src="images/BlankTBD.jpg" alt="" class="center">
+							<img style="WIDTH:250px; HEIGHT:360px" src="images/Ruishu.jpg" alt="" class="center">
 
 							<section id="content">
 
