Key faculty researchers tab

--- a/Registration.html
+++ b/Registration.html
@@ -29,6 +29,7 @@
 								<ul>
 									<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 									<li><a href="ConferenceOrganizers.html">Conference Organizers</a></li>
+									<li><a href="KeyFaculty.html">Key Faculty and Researchers</a></li>
 
 								</ul>
 					</li>
