--- a/RelatedInitiatives.html
+++ b/RelatedInitiatives.html
@@ -122,7 +122,7 @@
 		<footer id="footer">
 
 			<ul class="copyright">
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a>, Ari A. and Thomas J.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a>, Ari Amar</li>
 			</ul>
 		</footer>
 
