--- a/KeyFaculty.html
+++ b/KeyFaculty.html
@@ -597,7 +597,7 @@
 
 		<ul class="copyright">
 			<li>&copy; All rights reserved.</li>
-			<li>Design: <a href="http://html5up.net">HTML5 UP</a>, Ari A. and Thomas J.</li>
+			<li>Design: <a href="http://html5up.net">HTML5 UP</a>, Ari Amar</li>
 		</ul>
 	</footer>
 
