--- a/ConferenceOrganizers.html
+++ b/ConferenceOrganizers.html
@@ -187,7 +187,7 @@
 
 							<header class="major">
 								<h2>Dave Alman</h2>
-								<p>NETL Institutional Advisor<br> 
+								<p>NETL Institutional Advisor<br> Associate Director of Materials Engineering & Manufacturing, NETL
 									<br>
 								</p>
 							</header>
@@ -205,11 +205,11 @@
 							
 							<header class="major">
 								<h2>James Ferguson</h2>
-								<p>NETL Partnership Contact<br> 
+								<p>NETL Partnership Contact<br> U.S.Department of Energy, National Energy Technology Laboratory
 									<br>
 								</p>
 							</header>
-							<img style="WIDTH:300px; HEIGHT:360px" src="images/Ferguson.jpg" alt="" class="center">
+							<img style="WIDTH:250px; HEIGHT:350px" src="images/Ferguson.png" alt="" class="center">
 
 							
 							<p>
