--- a/KeyFaculty.html
+++ b/KeyFaculty.html
@@ -219,7 +219,7 @@
 						<p>UPittISC Affiliate Faculty (Pitt IE)<br>Assistant Professor of Industrial Engineering
 						</p>
 					</header>
-					<img style="WIDTH:300px; HEIGHT:320px" src="images/Bedewy.JPG" alt="" class="center">
+					<img style="WIDTH:300px; HEIGHT:320px" src="images/Bedewy.jpg" alt="" class="center">
 
 					<section id="content">
 
