--- a/ConferenceOrganizers.html
+++ b/ConferenceOrganizers.html
@@ -220,18 +220,18 @@
 
 	
 							<header class="major">
-								<h2>Caroline</h2>
-								<p>UPitt Partnership Contact<br> 
+								<h2>Caroline Wall</h2>
+								<p>UPitt Partnership Contact<br> Administrative Coordinator 
 									<br>
 								</p>
 							</header>
-							<img style="WIDTH:300px; HEIGHT:360px" src="images/Caroline.jpg" alt="" class="center">
+							<img style="WIDTH:370px; HEIGHT:330px" src="images/Caroline.jpg" alt="" class="center">
 
 							
 							<p>
-								<h4>Email:<a href=""></a> </h4>
+								<h4>Email: caroline.wall@pitt.edu<a href="caroline.wall@pitt.edu"></a> </h4>
 								<a href="" class="icon brands alt fa-linkedin-in"
-									target="_blank"><span class="label">LinkedIn</span></a>
+									target="https://www.linkedin.com/in/carolinewall/"><span class="label">LinkedIn</span></a>
 							</p>
 
 
