--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -146,6 +146,17 @@
 						target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
+					<header>
+						<hr />
+
+						<h4>Gary Choquette</h4>
+						<p>Pipeline Research Council International (PRCI)
+					</header>
+					<h4>Email:<a href="mailto:gchoquette@prci.org">  gchoquette@prci.org</a> </h4>
+					<a href="https://www.linkedin.com/in/gary-choquette-4191a227" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
+					</p>
+
 
 
 
