--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -157,7 +157,16 @@
 						target="_blank"><span class="label">LinkedIn</span></a>
 					</p>
 
+					<header>
+						<hr />
 
+						<h4>Arvind Tiwari</h4>
+						<p>Program Manager at GE Research
+					</header>
+					<h4>Email:<a href="mailto:arvind.tiwari1@ge.com">  arvind.tiwari1@ge.com</a> </h4>
+					<a href="https://in.linkedin.com/in/arvind-kumar-tiwari-95224019" class="icon brands alt fa-linkedin-in"
+						target="_blank"><span class="label">LinkedIn</span></a>
+					</p>
 
 
 
