--- a/Agenda.html
+++ b/Agenda.html
@@ -205,8 +205,8 @@
 						<td>8:15 AM</td>
 						<td>University Speakers – Case for a Sensing Collaboration (NETL and UPitt)
 
-							<br>• 15-min presentation (Pitt) – (Mike Holland, University of Pittsburgh)
-							<br>• 15-min presentation (NETL) – (Bryan Morreale, NETL)
+							<br>• 15-min presentation (Pitt) – (Dr. Mike Holland, Vice Chancellor for Science Policy and Research Strategies, U. Pitt)
+							<br>• 15-min presentation (NETL) – (Dr. Bryan Morreale, Associate Laboratory Director for Research & Innovation Center, NETL)
 
 
 						</td>
