--- a/Agenda.html
+++ b/Agenda.html
@@ -197,13 +197,13 @@
 					</tr>
 					<tr>
 						<td>8:10 AM</td>
-						<td>University Speaker Introduction</td>
+						<td>Keynote Speaker Introduction</td>
 
 					</tr>
 
 					<tr style="height:5px">
 						<td>8:15 AM</td>
-						<td>University Speakers – Case for a Sensing Collaboration (NETL and UPitt)
+						<td>Keynote Speakers – Case for a Sensing Collaboration (NETL and UPitt)
 
 							<br>• 15-min presentation (Pitt) – (Dr. Mike Holland, Vice Chancellor for Science Policy and Research Strategies, U. Pitt)
 							<br>• 15-min presentation (NETL) – (Dr. Bryan Morreale, Associate Laboratory Director for Research & Innovation Center, NETL)
