--- a/KeyFaculty.html
+++ b/KeyFaculty.html
@@ -605,7 +605,57 @@
 
 
 
+					<header class="major">
+						<h2>Khurram Naeem</h2>
+						<p>Senior Research Associate, UPITT<br>Department of Mechanical Engineering and Material Science
+						</p>
+					</header>
+					<img style="WIDTH:320px; HEIGHT:350px" src="images/Naeem.jpg" alt="" class="center">
 
+					<section id="content">
+
+						<h3>Biography</h3>
+						<p>Dr. Khurram Naeem is currently a senior Research Associate at the Swanson School of
+							Engineering, University of Pittsburgh. He has earned his Master and PhD degrees in
+							Information and Communication, both from the Gwangju Institute of Science and Technology
+							(GIST), South Korea in 2010 and 2016, respectively. Thereafter, he has served in the Korea
+							Research Institute of Standards and Science (KRISS), Daejeon from 2016 to 2018, and the
+							Advanced Photonics Research Institute (APRI), Gwangju from 2018 to 2022 as a senior
+							Researcher in the field of optical fiber sensing. He has worked on several R&D projects of
+							optical sensing for structural health monitoring applications in South Korea. He has
+							authored and co-authored numerous scientific publications in the field of specialty optical
+							fibers devices for smart sensing and communication applications.
+
+						</p>
+						<h3>Research interests</h3>
+
+						<ol>
+							<li>Specialty optical fibers (e.g. photonic crystal fiber) fabrication and devices</li>
+							<li>Optical fiber sensors and interrogators</li>
+							<li>Fiber lasers</li>
+							<li>Computational Nano-photonics (Full-vector FEM and FDTD coding)</li>
+							<li>Statistical optical signal processing and application of ML / AI techniques in photonics
+							</li>
+
+
+						</ol>
+					</section>
+
+					<p>
+					<h4>Email:<a href="mailto: khn16@pitt.edu">
+							khn16@pitt.edu</a>
+					</h4>
+					</p>
+					<p>
+					<h4> <a href="https://scholar.google.com/citations?user=TXJopFQAAAAJ" target="_blank">
+							Google Scholar</a>
+						/<a href="https://www.researchgate.net/profile/Khurram-Naeem" target="_blank">
+							ResearchGate</a>
+						/<a href="https://paulohodnicki-lab.github.io/students.html" target="_blank">
+							Group Website</a>
+
+					</h4>
+					</p>
 
 
 
