--- a/Agenda.html
+++ b/Agenda.html
@@ -287,10 +287,9 @@
 						<td>Panel on Sensing Opportunities and Needs (Wright Moderator)
 							<br>Industry, University and National Lab Perspective
 							<br>• 5-min Panelist 1 (Susan Maley, EPRI)
-							<br>• 5 min Panelist 2 (C. Ravi, Aquatech)
-							<br>• 5 min Panelist 3 (Elizabeth Cook, Duquesne Light)
-							<br>• 5 min Panelist 4 (David Alman, NETL)
-							<br>• 5 min Panelist 5 (Gary Choquette, Pipeline Research Council International)
+							<br>• 5 min Panelist 2 (Elizabeth Cook, Duquesne Light)
+							<br>• 5 min Panelist 3 (David Alman, NETL)
+							<br>• 5 min Panelist 4 (Gary Choquette, Pipeline Research Council International)
 							<br>• 35-min Moderated Q&A
 
 
@@ -384,7 +383,7 @@
 							<br>• 5 min Panelist 2 (Joshua Gould, Duquesne Light) 
 							<br>• 5 min Panelist 3 (Robert Lieberman, Lumoptix)
 							<br>• 5 min Panelist 4 (Robie Lewis, NETL)
-							<br>• 5 min Panelist 5 (Mat Podskarbi, Akselos)
+							<br>• 5 min Panelist 5 (Arvind Tiwari, GE)
 							<br>• 30-min Moderated Q&A
 							
 						</td>
