--- a/Agenda.html
+++ b/Agenda.html
@@ -197,7 +197,7 @@
 					</tr>
 					<tr>
 						<td>8:10 AM</td>
-						<td>Keynote Speaker Introduction</td>
+						<td>University Speaker Introduction</td>
 
 					</tr>
 
@@ -287,9 +287,10 @@
 						<td>Panel on Sensing Opportunities and Needs (Wright Moderator)
 							<br>Industry, University and National Lab Perspective
 							<br>• 5-min Panelist 1 (Susan Maley, EPRI)
-							<br>• 5 min Panelist 2 (Elizabeth Cook, Duquesne Light)
-							<br>• 5 min Panelist 3 (David Alman, NETL)
-							<br>• 5 min Panelist 4 (Gary Choquette, Pipeline Research Council International)
+							<br>• 5 min Panelist 2 (C. Ravi, Aquatech)
+							<br>• 5 min Panelist 3 (Elizabeth Cook, Duquesne Light)
+							<br>• 5 min Panelist 4 (David Alman, NETL)
+							<br>• 5 min Panelist 5 (Gary Choquette, Pipeline Research Council International)
 							<br>• 35-min Moderated Q&A
 
 
@@ -378,12 +379,12 @@
 
 					<tr>
 						<td>3:30 PM</td>
-						<td>Second Panel – How Can We Partner to Create Opportunity and Have Impacts?
+						<td>Second Panel – How Can We Partner to Create Opportunity and Have Impacts? (Ohodnicki Moderator)
 							<br>• 5-min Panelist 1 (Saba Almalkie, Ansys)
 							<br>• 5 min Panelist 2 (Joshua Gould, Duquesne Light) 
 							<br>• 5 min Panelist 3 (Robert Lieberman, Lumoptix)
 							<br>• 5 min Panelist 4 (Robie Lewis, NETL)
-							<br>• 5 min Panelist 5 (Arvind Tiwari, GE)
+							<br>• 5 min Panelist 5 (Mat Podskarbi, Akselos)
 							<br>• 30-min Moderated Q&A
 							
 						</td>
